--- a/Home Page/main.css
+++ b/Home Page/main.css
@@ -3,13 +3,20 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
 header{
-    background-color:rgb(143, 17, 143);
+    background-color: #0F172A;
     padding: 10px 20px;
     height: 12vh;
     width: 100%;
     margin: 0px;
-    
 }
 nav{
     display: grid;
@@ -17,13 +24,13 @@ nav{
     align-items: center;
 }
 h1{
-    color: white;   
+    color: #C0C0C0;   
     font-size: 25px;
     font-weight: 600;
     margin: 5px 25px 5px 5px;
 }
 h4{
-    color: white;
+    color: #C0C0C0;
     font-size: 18px;
     font-weight: 400;
     margin: 0 25px 5px 5px;
@@ -78,7 +85,7 @@ i{
     cursor: pointer;
 }
 div{
-    background-color:plum ;
+    background-color:#C0C0C0 ;
     height: 16px;
     width: 100%;
     padding: 5px 20px 5px 20px;
@@ -95,13 +102,13 @@ div>input::placeholder{
     font-size: 16px;
 }
 .search-bar{
-    background-color: plum;
+    background-color: #0F172A;
     width: 100%;
     height: 45px;
 }
 #search{
-    background-color: white;
-    color: black;
+    background-color: #C0C0C0;
+    color: #0F172A;
     border: none;
     width: 40px;
     height: 33px;
@@ -109,11 +116,11 @@ div>input::placeholder{
     margin-left: 10px;
 }
 #search:hover,#filters:hover{
-    border: 2px solid black;
+    border: 2px solid #0F172A;
 }
 #filters{
-    background-color: white;
-    color: black;
+    background-color: #C0C0C0;
+    color: #0F172A;
     border: none;
     width: 110px;
     height: 33px;
@@ -125,25 +132,34 @@ div>input::placeholder{
     padding-left: 10px;
 }
 button>i{
-    color: black;
+    color: #0F172A;
     font-size: 20px;
+}
+#main-cont{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    min-height: auto;
+    overflow: auto;
+    width: 100%;
 }
 
 /* Results layout so text doesn't pile up */
 .movie-list {
-    background-color: white;
-  width: 100%;  
-  height: 400px;
-  display: flex;
+    width: 100%;  
+    height: 2600px;
+    display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-around; 
 }
 .movie {
-  width: 21%;
-    height: 150px;
+    border-radius: 10px;
+    background-color: #0F172A;
+    width: 21%;
+    height: 600px;
     margin: 15px 0px 15px 0px;
-    box-shadow: 0px 0px 5px palevioletred;
+    
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -151,6 +167,17 @@ button>i{
     padding: 10px;
     text-align: center;
 }
+.movie>h3,p{
+    color: #C0C0C0;
+}
+.movie img.movie-poster {
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+  border-radius: 8px;
+  margin-bottom: 10px;
+}
+
 
 /* Overlay for popup */
 .overlay {
@@ -174,7 +201,7 @@ button>i{
   right: 1px;           /* align with Filters button */
   width: 300px;
   height: 350px;
-  background: plum;
+  background: #C0C0C0;
   border-radius: 5px;
   box-shadow: 0 4px 8px rgba(0,0,0,0.2);
   padding: 15px;
@@ -208,7 +235,7 @@ button>i{
   padding: 8px 12px;
   width: 100%;
   background: white;
-  color: plum;
+  color: #C0C0C0;
   border: none;
   border-radius: 6px;
   cursor: pointer;
@@ -220,32 +247,32 @@ button>i{
   color: white;
 }
 
-section{
-    background-color: white;
-    width: 100%;
-    height: 400px;
-}
+
 footer{
-    background-color: rgb(143, 17, 143);
-    height: 250px;
+    height: 2000px;
     width: 100%;
     display: grid;
     grid-template-columns: 1fr auto;
-    margin: 0px 0px;
-}
+    background-color: #0F172A;
+    color: #C0C0C0;
+}    
 .about{
-    background-color: rgb(143, 17, 143);
-    color: white;
+    background-color: #0F172A;
+    color: #C0C0C0;
     font-size: 20px;
     margin: 30px 0px;
     width: 500px;
     padding: 20px;
+    height: 250px;
 }
 .contact{
-    background-color: rgb(143, 17, 143);
-    color: white;
+    background-color: #0F172A;
+    color: #C0C0C0;
     font-size: 20px;
     margin: 30px 0px;
     width: 760px;
     padding: 20px 100px;
+    height: 250px;
 }
+
+
