--- a/Home Page/main.css
+++ b/Home Page/main.css
@@ -156,37 +156,99 @@ button>i{
 
 /* Results layout so text doesn't pile up */
 .movie-list {
-    width: 100%;  
-    height: 2600px;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-around; 
+  width: 100%; 
+  height: 2600px; 
+  display: flex; 
+  flex-wrap: wrap; 
+  align-items: center;
+  justify-content: space-around;  
+  gap: 20px; /* space between cards */
+  padding: 20px 20px;
+  box-sizing: border-box;
 }
+
 .movie {
-    border-radius: 10px;
-    background-color: #0F172A;
-    width: 21%;
-    height: 600px;
-    margin: 15px 0px 15px 0px;
-    
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    padding: 10px;
-    text-align: center;
-    cursor: pointer;
+  border-radius: 20px; 
+  background: #0F172A; 
+  width: 280px; 
+  height: 480px; 
+  margin: 10px; 
+  display: flex; 
+  flex-direction: column; 
+  align-items: center; 
+  justify-content: flex-start;  
+  text-align: center; 
+  cursor: pointer;      
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
-.movie>h3,p{
-    color: #C0C0C0;
+
+/* Poster container */
+.poster-container {
+  position: relative;
+  width: 275px;
+  height: 400px; /* fixed height for all posters */
+  overflow: hidden;
+  background-color: #0F172A;
 }
+
 .movie img.movie-poster {
+  margin-top: 10px; 
   width: 100%;
-  height: 400px;
+  height: 100%;
   object-fit: cover;
-  border-radius: 8px;
-  margin-bottom: 10px;
+  display: block;
+  border-radius: 20px; 
+  background-color: #0F172A;
+}
+
+/* Rating strip on bottom of image */
+.rating-strip {
+  margin-left: 20px;
+  position: absolute;
+  bottom: 0px;
+  left: 0;
+  width: 85.5%;
+  height: 25px;
+  background: rgba(0, 0, 0, 0.8);
+  color: #C0C0C0;
+  font-size: 1rem;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  
+  border-radius: 0 0 8px 8px;
+}
+.rating-strip .rating {
+  display: flex;
+  align-items: center;
+  
+}
+
+.rating-strip .likes {
+  display: flex;
+  align-items: center;
+}
+
+/* Text content below poster */
+.movie-details {
+  width: 250px;
+  text-align: center;
+  background-color: #0F172A;
+}
+
+.movie-details h3 {
+  font-size: 1.3rem;
+  color: #C0C0C0;
+}
+
+.movie-details p {
+  font-size: 0.95rem;
+  color: #C0C0C0;
+  
 }
 
 
